welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:9: error: not found: value doghouse
doghouse() 
^